--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,7 @@ dependencies:
     sdk: flutter
   intl: ^0.20.2
   table_calendar: ^3.2.0
+  shared_preferences: ^2.0.11
 
 dev_dependencies:
   flutter_test:
